Fixed cards layout on tablets

--- a/src/assets/styles/pages/_home.scss
+++ b/src/assets/styles/pages/_home.scss
@@ -9,6 +9,43 @@
 }
 
 
+@media only screen and (min-width: 600px) {
+  .cards {
+    
+    &__container {
+      grid-template-columns: repeat(auto-fit, minmax(280px, 332px));
+    }
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .cards {
+    
+    &__container {
+      grid-template-columns: repeat(auto-fit, minmax(280px, 360px));
+    }
+  }
+}
+
+
+@media only screen and (min-width: 900px) {
+  .cards {
+    
+    &__container {
+      grid-template-columns: repeat(auto-fit, minmax(280px, 314px));
+    }
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .cards {
+    
+    &__container {
+      grid-template-columns: repeat(auto-fit, minmax(300px, 366px));
+    }
+  }
+}
+
 @media only screen and (min-width: 1200px) {
   .cards {
     
